[tool.poetry]
name = "XenoPT"
version = "0.1.0"
description = "A collection of published thermobarometers for garnet two-pyroxene xenoliths. Allows for input of .csv data, with template provided in tb_parameters.py"
authors = ["Khalil Droubi <droubi@wisc.edu>"]
maintainers = []
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/okdpetrology/xenolith-thermobarometry/"
documentation = ""
keywords = [
"xenoliths",
"thermobarometry",
"Geoscience"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
